# C-ROS-FutBot

./: .gitignore
color_segmentation_ws/install/: local_setup.sh  setup.sh
color_segmentation_ws/install/segmentation/share/segmentation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
color_segmentation_ws/log/: latest_build
color_segmentation_ws/src/segmentation/: CMakeLists.txt  package.xml
color_segmentation_ws/src/segmentation/src/: calibrator_node.cpp  camera_node.cpp  detector_node.cpp
prueba1_ws/install/: local_setup.sh  setup.sh
prueba1_ws/install/cpp_robot_controller/lib/cpp_robot_controller/: twist_sequencer
prueba1_ws/install/cpp_robot_controller/share/ament_index/resource_index/parent_prefix_path/: cpp_robot_controller
prueba1_ws/install/cpp_robot_controller/share/cpp_robot_controller/: package.bash  package.dsv  package.sh  package.xml  package.zsh
prueba1_ws/log/: latest_build
prueba1_ws/src/cpp_robot_controller/: CMakeLists.txt
prueba1_ws/src/cpp_robot_controller/install/: local_setup.sh  setup.sh
prueba1_ws/src/cpp_robot_controller/install/cpp_robot_controller/lib/cpp_robot_controller/: led_node_cpp
prueba1_ws/src/cpp_robot_controller/install/cpp_robot_controller/share/cpp_robot_controller/: local_setup.dsv  local_setup.sh  package.ps1  package.sh  package.xml
prueba1_ws/src/cpp_robot_controller/install/cpp_robot_controller/share/cpp_robot_controller/cmake/: cpp_robot_controllerConfig.cmake
prueba1_ws/src/cpp_robot_controller/launch/: robot_launch.py
prueba1_ws/src/cpp_robot_controller/log/: latest_build
prueba1_ws/src/cpp_robot_controller/src/: data_logger_node.cpp  odom_publisher.cpp  twist_sequencer.cpp
prueba1_ws/src/cpp_robot_controller/urdf/: mi_robot.urdf
prueba1_ws/src/simple_controller/: package.xml  setup.py
prueba1_ws/src/simple_controller/simple_controller/: simplecontroller.py
prueba2_ws/src/c_ros_sim/launch/: simulator.launch.py
prueba2_ws/src/c_ros_sim/urdf/: c_ros_bot.urdf
prueba2_ws/src/c_ros_sim/worlds/: cancha_futbol.sdf
prueba2_ws/src/cpp_robot_controller/: CMakeLists.txt  package.xml
prueba2_ws/src/cpp_robot_controller/launch/: gazebo_sim.launch.py
prueba2_ws/src/cpp_robot_controller/src/: pi_straight_sequencer.cpp  pi_turn_sequencer.cpp
prueba2_ws/src/cpp_robot_controller/urdf/: c_ros_bot.urdf
prueba2_ws/src/simple_controller/simple_controller/: simple_controller_node.py
simulation_ws/src/c_ros_sim/: CMakeLists.txt  package.xml
simulation_ws/src/c_ros_sim/launch/: simulator.launch.py
simulation_ws/src/c_ros_sim/meshes/: Futbot3.0.stl
simulation_ws/src/c_ros_sim/urdf/: c_ros_bot.urdf
simulation_ws/src/c_ros_sim/worlds/: cancha_futbol.sdf
visual_servoing_ws/src/control/: CMakeLists.txt  package.xml
visual_servoing_ws/src/control/src/: ball_planner.cpp  pi_straight_sequencer.cpp  pure_pursuit_node.cpp  visual_tracker_node.cpp
visual_servoing_ws/src/simple_controller/: package.xml
visual_servoing_ws/src/vision_artificial/: CMakeLists.txt  package.xml
visual_servoing_ws/src/vision_artificial/launch/: vision_launch.py
visual_servoing_ws/src/vision_artificial/src/: camera_node.cpp
